# ai_analysis

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: data.ipynb  gradient.ipynb  test_notebook.ipynb
src/: main.py
src/data/: dataset.py
src/models/: MLP_ADAM.py  MLP_ADAM_L2.py  MLP_ADAM_batch.py  MLP_ADAM_batch_HE_init.py  MLP_ADAM_batch_HE_lrScheduler.py  MLP_L2.py  MLP_base.py  MLP_tf.py  base_MLP.py  mlp_run.py  tensorflow_seq.py
src/models/mlp/: activations.py  layers.py  lr_schedules.py  mlp.py  optimizers.py  scalers.py
src/visualization/: analyze_training_results.py  explore_data.py
